# OpenRocketX

./: .gitignore  NOTICE.md  README.md  build.gradle  settings.gradle
api/: build.gradle
api/src/main/java/x/api/: DesignController.java  ExportController.java  Json.java  MotorController.java  Server.java  SimController.java
api/src/main/java/x/bridge/: OrkAdapter.java
api/src/main/java/x/export/: GltfWriter.java  StlWriter.java
api/src/main/java/x/geom/: FinExtrude.java  Profiles.java  Revolve.java  RocketMesh.java  Triangle.java  TriangleMesh.java  Vec3.java
api/src/main/java/x/model/: BodyTubeSpec.java  FinSetSpec.java  NoseConeSpec.java  RocketSpec.java  ShapeType.java  Stage.java  TransitionSpec.java
api/src/test/java/x/api/: ServerIntegrationTest.java
api/src/test/java/x/export/: RocketExportTest.java  StlWriterTest.java
api/src/test/java/x/geom/: FinExtrudeTest.java  RevolveTest.java
core/src/main/java/info/openrocket/core/simulation/: FlightDataType.java
docs/: architecture.md  integration-plan.md
frontend/: package.json  pnpm-lock.yaml
frontend/src/: app.html
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/binaries/: README.md
frontend/src-tauri/src/: main.rs
frontend/src/lib/: examples.ts
frontend/src/lib/api/: client.ts  types.ts
frontend/src/lib/three/: RocketScene.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/export/: +page.svelte
frontend/src/routes/motors/: +page.svelte
frontend/src/routes/simulate/: +page.svelte
